--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 <link rel="shortcut icon" href="https://pastiwdpro.shop/gambar/icon2.png" sizes="16x16">
 <link rel="amphtml" href="https://bonusmantap.menangharian.shop/jp/depo88.html">
 <meta property="og:description" content="Depo88 adalah situs link alternatif slot online yang sudah terbukti paling gampang menang dan sudah direkomendasikan oleh banyak pemain yang sudah merasakan keuntungan besar di situs ini.">
-<meta property="og:image" content="assets/banner.jpg">
-<meta property="og:image:secure_url" content="assets/banner.jpg">
+<meta property="og:image" content="banner.jpg">
+<meta property="og:image:secure_url" content="banner.jpg">
 <meta property="og:image:width" content="1280">
 <meta property="og:image:height" content="720">
 <meta property="og:price:amount" content="0,00">
@@ -746,7 +746,7 @@ Check out
 <li id="Slide-template--16834096922841__main-33592361320665" class="product__media-item grid__item slider__slide is-active scroll-trigger animate--fade-in" data-media-id="template--16834096922841__main-33592361320665">
 <div class="product-media-container media-type-image media-fit-contain global-media-settings gradient constrain-height" style="--ratio: 1.7777777777777777; --preview-ratio: 1.7777777777777777;">
 <div class="product__media media media--transparent">
-<img src="assets/banner.jpg">
+<img src="banner.jpg">
 </div
 			</div>
 </li>
@@ -785,7 +785,7 @@ Depo88 : Situs Judi Online Slot Mudah Jaackpot
 </div>
 <div class="product__description rte quick-add-hidden">
 <p><a href="https://situsjp138.xyz/account/register/135236719" title="Depo88">
-<img src="assets/daftar.webp"></a></p>
+<img src="daftar.webp"></a></p>
 <p>Depo88 adalah situs link alternatif slot online yang sudah terbukti paling gampang menang dan sudah direkomendasikan oleh banyak pemain yang sudah merasakan keuntungan besar di situs ini.</p>
 </div>
 <div class="no-js-hidden" id="price-template--16834096922841__main" role="status">
@@ -968,7 +968,7 @@ View full details
     "@type": "Product",
     "name": "Keluaran Macau",
     "url": "https://depo88gacor.sammcknight.com",
-    "image": ["assets/banner.jpg"],
+    "image": ["banner.jpg"],
     "description": "Depo88 adalah situs link alternatif slot online yang sudah terbukti paling gampang menang dan sudah direkomendasikan oleh banyak pemain yang sudah merasakan keuntungan besar di situs ini.",
     "brand": {
       "@type": "Brand",
