--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <meta name="tgn.nation" content="Indonesia">
 <meta property="og:locale" content="id_ID" />
 <meta property="og:url" content="https://depo88gacor.sammcknight.com">
-<meta property="og:title" content="Depo88 : Situs Judi Online Slot Mudah Jaackpot">
+<meta property="og:title" content="Depo88 : Situs Judi Online Slot Mudah Jackpot">
 <meta property="og:type" content="product">
 <link rel="shortcut icon" href="https://pastiwdpro.shop/gambar/icon2.png" sizes="16x16">
 <link rel="amphtml" href="https://bonusmantap.menangharian.shop/jp/depo88.html">
