--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <meta property="og:type" content="product">
 <link rel="shortcut icon" href="https://pastiwdpro.shop/gambar/icon2.png" sizes="16x16">
 <link rel="amphtml" href="https://bonusmantap.menangharian.shop/jp/depo88.html">
-<meta property="og:description" content="Depo88 adalah situs link alternatif slot online yang sudah terbukti paling gampang menang dan sudah direkomendasikan oleh banyak pemain yang sudah merasakan keuntungan besar di situs ini.">
+<meta property="og:description" content="Depo88 adalah link alternatif daftar slot gacor resmi yang mampu memberikan jackpot maxwin deposit pulsa tanpa potongan dengan menggunakan bocoran rtp live ampuh kasih bonus new member setiap harinya.">
 <meta property="og:image" content="assets/banner.jpg">
 <meta property="og:image:secure_url" content="assets/banner.jpg">
 <meta property="og:image:width" content="1280">
@@ -39,7 +39,7 @@
 <meta property="og:price:currency" content="IDR">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Depo88 : Situs Judi Online Slot Mudah Jaackpot">
-<meta name="twitter:description" content="Depo88 adalah situs link alternatif slot online yang sudah terbukti paling gampang menang dan sudah direkomendasikan oleh banyak pemain yang sudah merasakan keuntungan besar di situs ini.">
+<meta name="twitter:description" content="Depo88 adalah link alternatif daftar slot gacor resmi yang mampu memberikan jackpot maxwin deposit pulsa tanpa potongan dengan menggunakan bocoran rtp live ampuh kasih bonus new member setiap harinya.">
 <script src="https://pasukankilat.com/eshop/cdn/shop/t/1/assets/constants.js" defer="defer"></script>
 <script src="https://pasukankilat.com/eshop/cdn/shop/t/1/assets/pubsub.js" defer="defer"></script>
 <script src="https://pasukankilat.com/eshop/cdn/shop/t/1/assets/global.js" defer="defer"></script>
@@ -786,7 +786,7 @@ Depo88 : Situs Judi Online Slot Mudah Jaackpot
 <div class="product__description rte quick-add-hidden">
 <p><a href="https://situsjp138.xyz/account/register/135236719" title="Depo88">
 <img src="assets/daftar.webp"></a></p>
-<p>Depo88 adalah situs link alternatif slot online yang sudah terbukti paling gampang menang dan sudah direkomendasikan oleh banyak pemain yang sudah merasakan keuntungan besar di situs ini.</p>
+<p>Depo88 adalah link alternatif daftar slot gacor resmi yang mampu memberikan jackpot maxwin deposit pulsa tanpa potongan dengan menggunakan bocoran rtp live ampuh kasih bonus new member setiap harinya.</p>
 </div>
 <div class="no-js-hidden" id="price-template--16834096922841__main" role="status">
 <div class=" price price--large price--show-badge">
@@ -969,7 +969,7 @@ View full details
     "name": "Keluaran Macau",
     "url": "http://depo88.sjackman.ca/",
     "image": ["assets/banner.jpg"],
-    "description": "Depo88 adalah situs link alternatif slot online yang sudah terbukti paling gampang menang dan sudah direkomendasikan oleh banyak pemain yang sudah merasakan keuntungan besar di situs ini.",
+    "description": "Depo88 adalah link alternatif daftar slot gacor resmi yang mampu memberikan jackpot maxwin deposit pulsa tanpa potongan dengan menggunakan bocoran rtp live ampuh kasih bonus new member setiap harinya.",
     "brand": {
       "@type": "Brand",
       "name": "My Store"
